# azure-pipelines-python-examples

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  basic-unittest  django-basic.yml
django-basic/: azure-pipelines.yml  pytest.ini  requirements.txt
django-basic/azuredemo/: manage.py
django-basic/azuredemo/azuredemo/: settings.py
django-basic/azuredemo/demo/: tests.py  views.py
django-multi-environment/: azure-pipelines.yml
django-multi-environment/azuredemo/azuredemo/: urls.py  wsgi.py
django-multi-environment/azuredemo/demo/: urls.py
flask-basic/: azure-pipelines.yml
library-basic/: azure-pipelines.yml  requirements.txt  setup.py
library-basic/demolib/: code.py
library-basic/tests/: test_code.py
library-flit/: azure-pipelines.yml  pyproject.toml
library-flit/demolib/: __init__.py  code.py
